--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://daminipurohit.github.io/flight-search-implementation--React",
   "name": "flight-search-react-app",
   "version": "1.0.0",
   "private": true,
@@ -10,10 +11,12 @@
     "test": "jest --colors --watchAll",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage --colors",
-    "test:update": "jest -u"
+    "test:update": "jest -u",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "core-js": "^2.6.9",
     "react": "^16.8.6",
     "react-datepicker": "^2.11.0",
@@ -45,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^6.0.0",
